package solidexercicio10.model;

/**
 * Direções de movimento. Mantém o eixo do jogo original: o Y cresce para baixo,
 * então "cima" diminui Y.
 */
public enum Direcao {
    CIMA(0, -1),
    BAIXO(0, 1),
    ESQUERDA(-1, 0),
    DIREITA(1, 0);

    private final int dx;
    private final int dy;

    Direcao(int dx, int dy) {
        this.dx = dx;
        this.dy = dy;
    }

    public int getDx() {
        return dx;
    }

    public int getDy() {
        return dy;
    }
}
